[package]
name = "d-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
reqwest = "0.11.12"
scraper = "0.13.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
