[package]
name = "d-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
dirs = "4.0.0"
once_cell = "1.15.0"
reqwest = "0.11.12"
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sled = "0.34.7"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
