[package]
name = "d-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
clap = { version = "4.0.9", features = ["derive"] }
dirs = "4.0.0"
once_cell = "1.15.0"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sled = "0.34.7"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "d"
path = "src/main.rs"
